# cis6930sp25-project1

./: COLLABORATORS.md  Pipfile  README.md  main.py  pyproject.toml
tests/: test_dataQuery.py  test_fetching_data.py  test_filtering_data.py  test_output_format.py
