[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Ruchita Potamsetti", email = "potamsetvssruchi@ufl.edu"}]
name = "project1"
description = "Project One from ruchipotamsetti -- Spring 2025"
version = "1.0"
readme = "README.md"

[project.urls]
Task = "https://ufdatastudio.com/cis6930sp25/project/1"
repository = "https://github.com/ruchipotamsetti/cis6930sp25-project1"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]